--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/third"
-    tools:context=".scenes.list.ListFragment">
+    tools:context=".scenes.main.list.ListFragment">
 
     <FrameLayout
         android:id="@+id/container_for_patents"
