--- a/app/src/main/res/layout/item_patent.xml
+++ b/app/src/main/res/layout/item_patent.xml
@@ -4,15 +4,25 @@
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/list_patent_image"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_image"
         android:layout_width="190dp"
         android:layout_height="150dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp" />
+        android:layout_marginLeft="30dp"
+        app:cardCornerRadius="20dp">
+
+        <ImageView
+            android:id="@+id/list_patent_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/list_patent_name"
@@ -20,12 +30,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/list_patent_image"
+        app:layout_constraintLeft_toRightOf="@id/card_view_image"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="20dp"
         android:textSize="16sp"
-        android:gravity="center"
         android:textStyle="bold"
         android:text="Probando tamaño y formato letra"
         android:layout_marginRight="30dp"
