--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,7 +17,10 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/detail_patent_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="312dp"
+                android:scaleType="center"
+                android:src="@drawable/ic_launcher_background"
+                />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view_detail_name"
