--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/action_fav"
         android:enabled="true"
-        android:icon="@drawable/ic_fav"
+        android:icon="@drawable/ic_star"
         android:title="@string/favorite"
         app:showAsAction="ifRoom" />
 
