--- a/app/src/main/res/layout/item_patent.xml
+++ b/app/src/main/res/layout/item_patent.xml
@@ -40,4 +40,13 @@
         android:layout_marginRight="30dp"
         android:layout_marginLeft="20dp" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#48000000"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="50dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
