--- a/app/src/main/res/layout/item_patent.xml
+++ b/app/src/main/res/layout/item_patent.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="210dp"
+    android:layout_height="120dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_image"
-        android:layout_width="190dp"
-        android:layout_height="150dp"
+        android:layout_width="140dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        app:cardCornerRadius="20dp">
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        app:cardCornerRadius="16dp">
 
         <ImageView
             android:id="@+id/list_patent_image"
@@ -32,9 +34,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/card_view_image"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="20dp"
-        android:textSize="16sp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         android:text="Probando tamaño y formato letra"
         android:layout_marginRight="30dp"
